Aplicar chequeo de calidad a modulo torneo

--- a/landing/templates/landing/detalle_equipo.html
+++ b/landing/templates/landing/detalle_equipo.html
@@ -162,7 +162,7 @@
             </div>
             <div class="text-column">
               <p><strong>{{torneo.torneo__nombre}}</strong><p>
-                <span class="small">{{torneo.torneo__fechaInicio | date:"o"}}</p>
+                <span class="small">{{torneo.torneo__fecha_inicio | date:"o"}}</p>
                 </div>
               </div>
         {% endfor %}
