--- a/torneo/templates/torneo/nueva_jornada.html
+++ b/torneo/templates/torneo/nueva_jornada.html
@@ -17,13 +17,13 @@
       <label>
           {{ form.fecha_inicio.label_tag }}
         </label>
-      <input type="date" name="{{form.fecha_inicio.html_name}}" required="" class="datepicker" id="{{form.fecha_inicio.id_for_label}}" /> {{ form.fechaInicio.errors }}
+      <input type="date" name="{{form.fecha_inicio.html_name}}" required="" class="datepicker" id="{{form.fecha_inicio.id_for_label}}" /> {{ form.fecha_inicio.errors }}
     </div>
     <div class="col s3">
       <label>
           {{ form.fecha_fin.label_tag }}
         </label>
-      <input type="date" name="{{form.fecha_fin.html_name}}" required="" class="datepicker" id="{{form.fecha_fin.id_for_label}}" /> {{ form.fechaInicio.errors }}
+      <input type="date" name="{{form.fecha_fin.html_name}}" required="" class="datepicker" id="{{form.fecha_fin.id_for_label}}" /> {{ form.fecha_inicio.errors }}
     </div>
     <div class="col s12">
       <div class="container-button">
