--- a/landing/templates/landing/lista_torneos.html
+++ b/landing/templates/landing/lista_torneos.html
@@ -19,11 +19,11 @@
         <li class="collection-item avatar listado">
           <a href="{% url 'landing:detalle_torneo' torneo.id %}">
           <span class="title">{{torneo.nombre}}</span>
-          <p>{{ torneo.fechaInicio }}</p>
-          {% if torneo.categoria == 0 and torneo.categoriaMax == 100 %}
+          <p>{{ torneo.fecha_inicio }}</p>
+          {% if torneo.categoria == 0 and torneo.categoria_max == 100 %}
             <p>Categoría: Libre</p>
             {% else %}
-            <p>Categoría: {{ torneo.categoria }} - {{ torneo.categoriaMax }} </p>
+            <p>Categoría: {{ torneo.categoria }} - {{ torneo.categoria_max }} </p>
             {% endif %}
         </a>
         </li>
