--- a/torneo/templates/torneo/editar_registro.html
+++ b/torneo/templates/torneo/editar_registro.html
@@ -6,26 +6,29 @@
     <h2 class="admin-title">Roles de juego {{ torneo.nombre }}</h2>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="flex space-between align-center direction-reverse jornadas-container">
+      <div class="flex">
         {% for jornada in jornadas %}
-        <div class="col">
-            <a href="#{{jornada.id}}" onclick="carga_partidos({{jornada.id}})"><h6>{{jornada.jornada}}</h6></a>
-        </div>
+          <div class="jornadas">
+              <a href="#{{jornada.id}}" onclick="carga_partidos({{jornada.id}})">
+                <h6>{{jornada.jornada}}</h6>
+              </a>
+          </div>
         {% endfor %}
-        <div class="col">
-            <a class="modal-trigger boton-crear btn" href="#modal_torneo" data-id="{{torneo.id}}" data-nombre="{{torneo.nombre}}"><h6>Crear Jornada</h6></a>
+      </div>
+        <div class="col flex">
+            <a class="modal-trigger boton-crear cancel back" href="#modal_torneo"
+            data-id="{{torneo.id}}" data-nombre="{{torneo.nombre}}">
+            Crear Jornada</a>
         </div>
     </div>
     <hr />
     <div id="partidos">
-
     </div>
     <div id="modal_torneo" class="modal">
       <div class="modal-content">
-
       </div>
       <div class="modal-footer">
-
       </div>
   </div>
 </div>
@@ -66,7 +69,7 @@
             var botones = '<a href="#cancelar" class="modal-action modal-close cancel cancel-delete">Cancelar</a>  <a href="cerrar_registro/' + id + '" class="modal-action modal-close delete-color confirmar-eliminar">Aceptar</a>' ;
             $(".modal-footer").html(botones) ;
         });
-        
+
         $(".boton-crear").click(function(){
             var id = $(this).attr("data-id") ;
             var nombre = $(this).attr("data-nombre") ;
