editar cedula admin

--- a/landing/templates/landing/organizadores.html
+++ b/landing/templates/landing/organizadores.html
@@ -18,7 +18,7 @@
           <img class="person" src="{% static 'static_media/Yo.jpg' %}">
         </div>
         <div class="card-content">
-          <span class="card-title">Erica García</span>
+          <span class="card-title">Erica Feria</span>
           <p>Directora General</p>
         </div>
       </div>
