--- a/torneo/templates/torneo/registrar_cedula.html
+++ b/torneo/templates/torneo/registrar_cedula.html
@@ -53,7 +53,7 @@
                   <td>
                     <label>
                       <input type="checkbox" jugadora="{{values.id}}" partido="{{id_partido}}" equipo="{{values.equipo}}" {% if values.asistencia == 1 %}checked{% endif %}>
-                      <span>{{values.nombre}}</span>
+                      <span>{{values.numero}} : {{values.nombre}}</span>
                     </label>
                   </td>
                 {% else %}
@@ -65,7 +65,7 @@
                   <td>
                     <label>
                       <input type="checkbox" jugadora="{{values.id}}" partido="{{id_partido}}" equipo="{{values.equipo}}" {% if values.asistencia == 1 %}checked{% endif %}>
-                      <span>{{values.nombre}}</span>
+                      <span>{{values.numero}} : {{values.nombre}}</span>
                     </label>
                   </td>
                 </tr>
